--- a/src/components/Stopwatch/components/Stopwatch.css
+++ b/src/components/Stopwatch/components/Stopwatch.css
@@ -1,4 +1,3 @@
 .Stopwatch {
   /* text-align: center; */
-  margin-top: 2.2rem;
 }
