--- a/src/components/Stopwatch/components/Timer.css
+++ b/src/components/Stopwatch/components/Timer.css
@@ -1,5 +1,5 @@
 .Timer {
-  text-align: left;
-  font-size: 40px;
-  padding: 20px;
+  text-align: center;
+  font-size: 20px;
+  padding-bottom: 15px;
 }
